<resources>
    <string name="app_name">Goalz</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_bar_explore">Explore</string>
    <string name="app_bar_goals">My Goals</string>
    <string name="app_bar_users_library">Resource Library</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="AlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="Alphabet_only">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="Numeric_only">0123456789</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="filter_title">Filter</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_change_password">Change Account Password</string>
    <string name="delete_goal_success_toast">Goal Successfully Removed</string>
    <string name="delete_goal_fail_toast">Cannot Delete Goal</string>
    <string name="unavailable_function_toast">Currently not available</string>
    <string name="explore_resource_fragment_add_to_library_success_toast">Resource successfully added</string>
    <string name="explore_resource_fragment_add_to_library_fail_toast">Failed to add resource</string>
    <string name="create_goal_activity_appbar_title">New Goal</string>
    <string name="create_goal_activity_invalid_fields_toast">Invalid Fields</string>
    <string name="create_goal_activity_success_toast">Goal Successfully Created</string>
    <string name="create_goal_activity_title_hint">Title</string>
    <string name="create_goal_activity_topic_hint">Topic</string>
    <string name="create_goal_activity_description_hint">Description</string>
    <string name="create_goal_activity_deadline_hint">Deadline</string>
    <string name="create_goal_activity_parent_hint">Parent goal</string>
    <string name="create_goal_activity_button_text">Create</string>
    <string name="create_resource_activity_appbar_title">New Resource</string>
    <string name="create_resource_activity_invalid_fields_toast">Invalid Fields</string>
    <string name="create_resource_activity_invalid_uri_toast">Invalid URL</string>
    <string name="create_resource_activity_success_toast">Resource Successfully Created</string>
    <string name="create_resource_activity_fail_toast">Resource Creation Failed</string>
    <string name="create_resource_activity_title_hint">Title</string>
    <string name="create_resource_activity_topic_hint">Topic</string>
    <string name="create_resource_activity_url_hint">URL</string>
    <string name="create_resource_activity_button_text">Create</string>
    <string name="create_recommendation_activity_appbar_title">Post Recommendation</string>
    <string name="create_recommendation_activity_title_hint">Title</string>
    <string name="create_recommendation_activity_required_time_hint">Required Time (minutes)</string>
    <string name="create_recommendation_activity_resource_tw_text">Resource</string>
    <string name="create_recommendation_activity_description_hint">Description</string>
    <string name="create_recommendation_activity_post_btn_text">Post</string>
    <string name="create_recommendation_activity_invalid_fields_toast">Invalid Fields</string>
    <string name="create_recommendation_activity_success_toast">Recommendation Successfully Created</string>
    <string name="create_recommendation_activity_fail_toast">Recommendation Creation Failed</string>
    <string name="goal_activity_subgoals_tab">Subgoals</string>
    <string name="goal_activity_resources_tab">Resources</string>
    <string name="goal_activity_status_template">%</string>
    <string name="goal_activity_deadline_days_template">&#160;days left</string>
    <string name="goal_activity_deadline_day_template">&#160;day left</string>
    <string name="goal_activity_deadline_no_set">No deadline set</string>
    <string name="goal_activity_title">Goal Info</string>
    <string name="goal_activity_delete_menu_item_title">Delete</string>
    <string name="goal_activity_edit_menu_item_title">Edit</string>
    <string name="goal_activity_recommend_menu_item_title">Recommend</string>
    <string name="goal_activity_clone_menu_item_title">Clone</string>
    <string name="goal_activity_delete_dialog_messages">Are you sure you want to delete this goal?</string>
    <string name="goal_activity_delete_dialog_positive">Confirm</string>
    <string name="goal_activity_delete_dialog_negative">Cancel</string>
    <string name="goal_activity_delete_dialog_tag">DELETE DIALOG</string>
    <string name="goal_activity_progress_dialog_message">Set new progress value</string>
    <string name="goal_activity_progress_dialog_tag">PROGRESS DIALOG</string>
    <string name="goal_activity_update_status_success_toast">Status Successfully Updated</string>
    <string name="goal_activity_update_status_fail_toast">Cannot Update Status</string>
    <string name="activity_goal_rate_rec_dialog_message">Rate recommendation</string>
    <string name="goal_activity_rate_dialog_tag">RATE DIALOG</string>
    <string name="goal_activity_rate_success_toast">Successfully Rated</string>
    <string name="goal_activity_rate_fail_toast">Failed to rate</string>
    <string name="edit_goal_activity_done_menu_item_title">Done</string>
    <string name="edit_goal_activity_update_goal_success_toast">Goal Successfully Updated</string>
    <string name="edit_goal_activity_update_goal_fail_toast">Cannot Update Goal</string>
    <string name="edit_goal_activity_title_hint">Title</string>
    <string name="edit_goal_activity_topic_hint">Topic</string>
    <string name="edit_goal_activity_deadline_hint">Deadline</string>
    <string name="edit_goal_activity_description_hint">Description</string>
    <string name="edit_goal_activity_goal_information_section_heading">Additional Information</string>
    <string name="edit_profile_activity_appbar_title">Edit Profile</string>
    <string name="edit_profile_update_profile_success_toast">Profile successfully updated</string>
    <string name="edit_profile_update_profile_failed_snackbar">Unable to update the profile</string>
    <string name="edit_profile_activity_minimum_age_snackbar">Minimum Age = 12</string>
    <string name="edit_profile_activity_invalid_fields_snackbar">Invalid Fields</string>
    <string name="edit_profile_activity_account_information_subtitle">Account Information</string>
    <string name="edit_profile_activity_nickname_hint">Nickname</string>
    <string name="edit_profile_activity_edit_email_and_password_button">Change the Email and Password</string>
    <string name="edit_profile_activity_personal_information_subtitle">Personal Information</string>
    <string name="edit_profile_activity_first_name_hint">First Name</string>
    <string name="edit_profile_activity_last_name_hint">Last Name</string>
    <string name="edit_profile_activity_birthdate_hint">Birth Date</string>
    <string name="edit_profile_activity_gender_hint">Gender :</string>
    <string name="edit_profile_activity_website_hint">Website</string>
    <string name="login_activity_appbar_title">Login</string>
    <string name="login_activity_login_success">Login Success</string>
    <string name="login_activity_login_failed">Login Failed, check your credentials</string>
    <string name="login_activity_wrong_email_format_snackbar">Wrong Email Format</string>
    <string name="login_activity_invalid_fields_snackbar">Invalid Fields</string>
    <string name="login_activity_email_required_snackbar">Email Required</string>
    <string name="login_activity_password_required_snackbar">Password Required</string>
    <string name="login_activity_email_hint">Email</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_activity_forgot_password_button">Forgot Password?</string>
    <string name="login_activity_login_button">Login</string>
    <string name="onboarding_activity_not_connected">You are not connected to the Internet</string>
    <string name="onboarding_activity_login_button">LOGIN</string>
    <string name="onboarding_activity_signup_button">SIGN UP</string>
    <string name="onboarding_activity_without_login_button">Use Goalz Tracker without login</string>
    <string name="signup_activity_appbar_title">Sign Up</string>
    <string name="signup_activity_nickname_required">Nickname required</string>
    <string name="signup_activity_enter_your_text">Enter your</string>
    <string name="signup_activity_nickname_heading">Nickname</string>
    <string name="signup_activity_nickname_hint">Ex. mynickname</string>
    <string name="signup_activity_next_button">NEXT</string>
    <string name="signup_activity_register_button">REGISTER</string>
    <string name="signup_activity_personal_information_heading">Personal Information</string>
    <string name="signup_activity_account_credentials_heading">Account Credentials</string>
    <string name="signup_activity_firstname_hint">First Name</string>
    <string name="signup_activity_lastname_hint">Last Name</string>
    <string name="signup_activity_birthdate_hint">Birth Date</string>
    <string name="signup_activity_email_hint">Email</string>
    <string name="signup_activity_password_hint">Password</string>
    <string name="signup_activity_confirm_password_hint">Confirm Password</string>
    <string name="signup_activity_invalid_fields_snackbar">Invalid Fields</string>
    <string name="signup_activity_email_required">Email Required</string>
    <string name="signup_activity_password_required">Password Required</string>
    <string name="signup_activity_confirm_password_required">Confirm Password Required</string>
    <string name="signup_activity_birthdate_required">Birtdate Required</string>
    <string name="signup_activity_firstname_required">First Name Required</string>
    <string name="signup_activity_lastname_required">Last Name Required</string>
    <string name="signup_activity_minimum_age">Need to be at least 12 years old to register</string>
    <string name="signup_activity_wrong_password">Confirm password must be the same</string>
    <string name="signup_activity_password_too_short">Password is too short, Min: 8 Characters</string>
    <string name="signup_activity_wrong_email_format">Wrong Email Format</string>
    <string name="signup_activity_successful_toast">Successfully Registered</string>
    <string name="signup_activity_email_registered_snackbar">Email already Registered</string>
    <string name="user_activity_title_template">\'s profile</string>
    <string name="user_activity_points_needed">Points to the next level</string>
    <string name="user_activity_goals_created">Goals Created</string>
    <string name="user_activity_goals_completed">Goals Completed</string>
    <string name="user_activity_resources">Resources</string>
    <string name="user_activity_age">Age:</string>
    <string name="user_activity_website">Website:</string>
    <string name="user_activity_gender">Gender:</string>
    <string name="notification_new_recommendation_title">New Recommendation</string>
    <string name="goals_activity_appbar_title">\'s goals</string>
</resources>